--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,5 @@
 {
   "url": "https://tokenizeits.org",
   "name": "TokenizeIT APP",
-  "iconUrl": "https://remaptools.github.io/website/logo_TITS.png",
-  "termsOfUseUrl": "https://tokenizeits.org/terms",
-  "privacyPolicyUrl": "https://tokenizeits.org/privacy"
+  "iconUrl": "https://remaptools.github.io/website/logo_TITS.png"
 }
