--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://tokenizeits.org",
+  "url": "https://tokenizeits.io",
   "name": "TokenizeIT APP",
   "iconUrl": "https://remaptools.github.io/website/logo_TITS.png"
 }
